--- a/ProjectManagmentSystem/ProjectManagmentSystem.csproj
+++ b/ProjectManagmentSystem/ProjectManagmentSystem.csproj
@@ -86,6 +86,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AddProjects.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AddProjects.Designer.cs">
+      <DependentUpon>AddProjects.cs</DependentUpon>
+    </Compile>
+    <Compile Include="AddTasks.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AddTasks.Designer.cs">
+      <DependentUpon>AddTasks.cs</DependentUpon>
+    </Compile>
     <Compile Include="AddEmployee.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -124,6 +136,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="AddProjects.resx">
+      <DependentUpon>AddProjects.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="AddTasks.resx">
+      <DependentUpon>AddTasks.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="AddEmployee.resx">
       <DependentUpon>AddEmployee.cs</DependentUpon>
     </EmbeddedResource>
